# bepis-lite

./: .gitignore  README.md  bepis-function-calling.excalidraw
bepis-lite-client/: client.py
bepis-lite-server/: Cargo.toml  Dockerfile
bepis-lite-server/src/: main.rs
